# sorteador

./: app.py  index.html  pyproject.toml
