[tool.poetry]
name = "sorteador"
version = "0.1.0"
description = ""
authors = ["afonsolelis <afonso.brandao@prof.inteli.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
